changed height hero.js. fixed footer / overlap

--- a/src/components/hero.module.css
+++ b/src/components/hero.module.css
@@ -13,7 +13,8 @@
 
   align-items: center;
 
-  min-height: 75vh;
+  /* min-height: 75vh; */
+  height: 75%;
 }
 
 .heroImage {
@@ -28,7 +29,7 @@
 
     align-items: flex-start;
 
-    min-height: 75vh;
+    min-height: 75%;
   }
 
   .heroRightColumn > h1 {
